@startuml need_to_find_id

    abstract class Node {
        +swhid : String
    }



    class Content extends Node{
        + length : String
        + status : String
    
    }
    class Directory extends Node {
    }

    class DirectoryEntry {
        + name : String
    }
    class Revision extends Node {
        +message : String
        +author : String
        +date : DateTime
        +committer : String
        +committerDate : DateTime
    }
    Revision "*" --> "1" Directory

    class Release extends Node{
        + date : DateTime
        + author : String
        + name : String
        + message : String
    
    }

    Release "*" --> "1" Revision

    class SnapshotBranch {
      + name : String
    }
    class Snapshot extends Node{
    }
    Snapshot "*" --> "*" Release
    Snapshot "*" --> "*" Revision

    (Snapshot,Release) . SnapshotBranch
    (Snapshot,Revision) . SnapshotBranch


    class Origin extends Node {
        +origin : String
    }
    Origin "*" --> "*" Snapshot




Directory "*" --> "*" Content
Directory "*" --> "*" Revision
Directory "*" --> "*" Directory




(Directory, Content) . DirectoryEntry
(Directory, Directory) . DirectoryEntry
(Directory, Revision) . DirectoryEntry


@enduml